# nfo-tool

./: .gitignore  README.md  main.py  pyproject.toml
docs/: cli-commands.md  configuration.md  environment.md  getting-started.md  profiles.md  python-api.md
examples/: demo.py  episode.nfo  movie.json  movie.nfo  movie.xml  music_album.json  nfo-editor-example.yaml  show.nfo  tvshow.xml
nfo_editor/: __init__.py
nfo_editor/cli/: __init__.py  main.py
nfo_editor/cli/commands/: __init__.py  detect.py  edit.py  load.py  scan.py
nfo_editor/cli/config/: __init__.py  loader.py  schemas.py  templates.py
nfo_editor/cli/formatting/: __init__.py  progress.py  syntax.py  tables.py  themes.py
nfo_editor/cli/interactive/: __init__.py  app.py  browsers.py  dialogs.py  forms.py  menus.py
nfo_editor/core/: __init__.py  detector.py  editor.py  scanner.py
nfo_editor/parsers/: __init__.py  base.py  json_parser.py  text_parser.py  xml_parser.py
nfo_editor/utils/: __init__.py  exceptions.py
nfo_editor/writers/: __init__.py  base.py  json_writer.py  text_writer.py  xml_writer.py
tests/: test_basic.py
