[project]
name = "nfo-editor"
version = "0.1.0"
description = "A Python library for parsing and editing .nfo files in various formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=4.9.0",
    "chardet>=5.0.0",
    "click>=8.1.0",              # Modern CLI framework
    "rich>=13.0.0",              # Beautiful terminal output
    "textual>=0.50.0",           # Advanced TUI framework
    "pydantic>=2.0.0",           # Config validation  
    "pyyaml>=6.0",               # YAML support
    "typer-config>=1.0.0",       # Enhanced config integration
]
authors = [
    {name = "NFO Editor", email = "nfo@example.com"},
]
keywords = ["nfo", "metadata", "editor", "xml", "parsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
nfo-editor = "nfo_editor.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
